// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateRagChunker > snapshot 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.
//
// Splits text into overlapping fixed-size chunks, breaking at sentence
// boundaries when possible.
//
// Usage:
//   import { chunkText } from './chunker.js'
//   const chunks = chunkText('Long document text...')

export interface ChunkOptions {
  /** Target chunk size in characters (default: 1000) */
  chunkSize?: number
  /** Overlap between consecutive chunks in characters (default: 10% of chunkSize) */
  overlap?: number
  /** Break at sentence boundaries when a terminator is found near the chunk end */
  sentenceBoundary?: boolean
}

const SENTENCE_TERMINATORS = /[.!?]\\s/g

/**
 * Splits \`text\` into an array of overlapping chunks.
 *
 * Strategy:
 * 1. Find the natural chunk end at chunkSize characters.
 * 2. If sentenceBoundary is true, scan backwards for a sentence terminator
 *    within the last 20% of the chunk. Split there if found.
 * 3. Start the next chunk \`overlap\` characters before the end of the previous one.
 */
export function chunkText(text: string, options: ChunkOptions = {}): string[] {
  const chunkSize = options.chunkSize ?? 1000
  const overlap = options.overlap ?? Math.floor(chunkSize * 0.1)
  const sentenceBoundary = options.sentenceBoundary ?? true

  if (text.length <= chunkSize) return [text]

  const chunks: string[] = []
  let start = 0

  while (start < text.length) {
    const end = Math.min(start + chunkSize, text.length)
    let splitAt = end

    if (sentenceBoundary && end < text.length) {
      // Scan backwards within the last 20% of the chunk for a sentence terminator
      const scanFrom = Math.max(start, end - Math.floor(chunkSize * 0.2))
      const window = text.slice(scanFrom, end)
      let lastTerminator = -1
      SENTENCE_TERMINATORS.lastIndex = 0
      let match: RegExpExecArray | null
      while ((match = SENTENCE_TERMINATORS.exec(window)) !== null) {
        lastTerminator = match.index
      }
      if (lastTerminator >= 0) {
        splitAt = scanFrom + lastTerminator + 1
      }
    }

    chunks.push(text.slice(start, splitAt).trim())
    start = splitAt - overlap
  }

  return chunks.filter((c) => c.length > 0)
}
"
`;

exports[`generateRagEmbedRoute > includes auth guard when auth enabled 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { embed } from 'ai'
import { anthropic } from '@ai-sdk/anthropic'
import { getRagStore } from '@/lib/rag/store'
import { auth } from '@/auth'

export async function POST(req: Request) {
  const session = await auth()
  if (!session) return new Response('Unauthorized', { status: 401 })

  const { text } = await req.json()

  const store = getRagStore()

  const { embedding } = await embed({
    model: (anthropic as any).embedding('text-embedding-3-small'),
    value: text,
  })

  await store.upsert({
    id: crypto.randomUUID(),
    text,
    embedding,
  })

  return Response.json({ ok: true })
}
"
`;

exports[`generateRagEmbedRoute > snapshot — no auth 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { embed } from 'ai'
import { anthropic } from '@ai-sdk/anthropic'
import { getRagStore } from '@/lib/rag/store'

export async function POST(req: Request) {
  // TODO: bring your own auth
  // Add session validation here before processing messages. Example with NextAuth:
  //   import { auth } from '@/auth'
  //   const session = await auth()
  //   if (!session) return new Response('Unauthorized', { status: 401 })

  const { text } = await req.json()

  const store = getRagStore()

  const { embedding } = await embed({
    model: (anthropic as any).embedding('text-embedding-3-small'),
    value: text,
  })

  await store.upsert({
    id: crypto.randomUUID(),
    text,
    embedding,
  })

  return Response.json({ ok: true })
}
"
`;

exports[`generateRagHook > snapshot — non-streaming 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

'use client'

import { useState } from 'react'

export function useRagQuery() {
  const [result, setResult] = useState<string | null>(null)
  const [isLoading, setIsLoading] = useState(false)
  const [error, setError] = useState<Error | null>(null)

  async function query(input: string, topK = 5) {
    setIsLoading(true)
    setError(null)
    try {
      const res = await fetch('/api/rag/query', {
        method: 'POST',
        headers: { 'Content-Type': 'application/json' },
        body: JSON.stringify({ query: input, topK }),
      })
      const data = await res.json() as { text: string }
      setResult(data.text)
    } catch (err) {
      setError(err instanceof Error ? err : new Error(String(err)))
    } finally {
      setIsLoading(false)
    }
  }

  return { result, isLoading, error, query }
}
"
`;

exports[`generateRagHook > snapshot — streaming 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

'use client'

import { useRef, useState } from 'react'

export function useRagQuery() {
  const [result, setResult] = useState<string>('')
  const [isLoading, setIsLoading] = useState(false)
  const [error, setError] = useState<Error | null>(null)
  const readerRef = useRef<ReadableStreamDefaultReader<string> | null>(null)

  async function query(input: string, topK = 5) {
    setIsLoading(true)
    setResult('')
    setError(null)

    try {
      const res = await fetch('/api/rag/query', {
        method: 'POST',
        headers: { 'Content-Type': 'application/json' },
        body: JSON.stringify({ query: input, topK }),
      })

      if (!res.body) throw new Error('No response body')

      const reader = res.body.pipeThrough(new TextDecoderStream()).getReader()
      readerRef.current = reader

      while (true) {
        const { done, value } = await reader.read()
        if (done) break
        setResult((prev) => prev + value)
      }
    } catch (err) {
      setError(err instanceof Error ? err : new Error(String(err)))
    } finally {
      setIsLoading(false)
      readerRef.current = null
    }
  }

  function stop() {
    readerRef.current?.cancel()
  }

  return { result, isLoading, error, query, stop }
}
"
`;

exports[`generateRagMemoryStore > snapshot 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { cosineSimilarity } from 'ai'
import type { RagChunk, RagStore } from './store.js'

export class MemoryRagStore implements RagStore {
  private chunks: Required<RagChunk>[] = []

  async upsert(chunk: Required<RagChunk>): Promise<void> {
    const idx = this.chunks.findIndex((c) => c.id === chunk.id)
    if (idx >= 0) {
      this.chunks[idx] = chunk
    } else {
      this.chunks.push(chunk)
    }
  }

  async query({ embedding, topK }: { embedding: number[]; topK: number }): Promise<RagChunk[]> {
    return this.chunks
      .map((c) => ({ chunk: c, score: cosineSimilarity(embedding, c.embedding) }))
      .sort((a, b) => b.score - a.score)
      .slice(0, topK)
      .map(({ chunk }) => ({ id: chunk.id, text: chunk.text }))
  }
}
"
`;

exports[`generateRagPgvectorStore > snapshot 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import postgres from 'postgres'
import type { RagChunk, RagStore } from './store.js'

const sql = postgres(process.env['POSTGRES_URL']!)

export class PgvectorRagStore implements RagStore {
  async upsert(chunk: Required<RagChunk>): Promise<void> {
    const vectorLiteral = \`[\${chunk.embedding.join(',')}]\`
    await sql\`
      INSERT INTO rag_chunks (id, text, embedding)
      VALUES (\${chunk.id}, \${chunk.text}, \${vectorLiteral}::vector)
      ON CONFLICT (id) DO UPDATE
        SET text = EXCLUDED.text,
            embedding = EXCLUDED.embedding
    \`
  }

  async query({ embedding, topK }: { embedding: number[]; topK: number }): Promise<RagChunk[]> {
    const vectorLiteral = \`[\${embedding.join(',')}]\`
    const rows = await sql<{ id: string; text: string }[]>\`
      SELECT id, text
      FROM rag_chunks
      ORDER BY embedding <=> \${vectorLiteral}::vector
      LIMIT \${topK}
    \`
    return rows.map((r) => ({ id: r.id, text: r.text }))
  }
}
"
`;

exports[`generateRagQueryRoute > snapshot — auth 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { embed, generateText } from 'ai'
import { anthropic } from '@ai-sdk/anthropic'
import { getRagStore } from '@/lib/rag/store'
import { auth } from '@/auth'

export async function POST(req: Request) {
  const session = await auth()
  if (!session) return new Response('Unauthorized', { status: 401 })

  const { query, topK = 5 } = await req.json()

  const { embedding } = await embed({
    model: (anthropic as any).embedding('text-embedding-3-small'),
    value: query,
  })

  const store = getRagStore()
  const chunks = await store.query({ embedding, topK })
  const context = chunks.map((c) => c.text).join('\\n\\n')

  const result = generateText({
    model: anthropic("claude-opus-4-5"),
    system: [
      'Answer using only the context below. If the answer is not in the context, say so.',
      '',
      'Context:',
      context,
    ].join('\\n'),
    prompt: query,
  })

  return Response.json({ text: result.text })
}
"
`;

exports[`generateRagQueryRoute > snapshot — non-streaming 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { embed, generateText } from 'ai'
import { anthropic } from '@ai-sdk/anthropic'
import { getRagStore } from '@/lib/rag/store'

export async function POST(req: Request) {
  // TODO: bring your own auth
  // Add session validation here before processing messages. Example with NextAuth:
  //   import { auth } from '@/auth'
  //   const session = await auth()
  //   if (!session) return new Response('Unauthorized', { status: 401 })

  const { query, topK = 5 } = await req.json()

  const { embedding } = await embed({
    model: (anthropic as any).embedding('text-embedding-3-small'),
    value: query,
  })

  const store = getRagStore()
  const chunks = await store.query({ embedding, topK })
  const context = chunks.map((c) => c.text).join('\\n\\n')

  const result = generateText({
    model: anthropic("claude-opus-4-5"),
    system: [
      'Answer using only the context below. If the answer is not in the context, say so.',
      '',
      'Context:',
      context,
    ].join('\\n'),
    prompt: query,
  })

  return Response.json({ text: result.text })
}
"
`;

exports[`generateRagQueryRoute > snapshot — streaming 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { embed, streamText } from 'ai'
import { anthropic } from '@ai-sdk/anthropic'
import { getRagStore } from '@/lib/rag/store'

export async function POST(req: Request) {
  // TODO: bring your own auth
  // Add session validation here before processing messages. Example with NextAuth:
  //   import { auth } from '@/auth'
  //   const session = await auth()
  //   if (!session) return new Response('Unauthorized', { status: 401 })

  const { query, topK = 5 } = await req.json()

  const { embedding } = await embed({
    model: (anthropic as any).embedding('text-embedding-3-small'),
    value: query,
  })

  const store = getRagStore()
  const chunks = await store.query({ embedding, topK })
  const context = chunks.map((c) => c.text).join('\\n\\n')

  const result = await streamText({
    model: anthropic("claude-opus-4-5"),
    system: [
      'Answer using only the context below. If the answer is not in the context, say so.',
      '',
      'Context:',
      context,
    ].join('\\n'),
    prompt: query,
  })

  return result.toTextStreamResponse()
}
"
`;

exports[`generateRagSchemaSql > snapshot 1`] = `
"-- Generated by ai-wingman — edit freely, you own this file.
-- Run this once against your database before starting the app.

CREATE EXTENSION IF NOT EXISTS vector;

CREATE TABLE IF NOT EXISTS rag_chunks (
  id        TEXT PRIMARY KEY,
  text      TEXT NOT NULL,
  -- TODO: dimension must match your embedding model (1536 = text-embedding-3-small)
  embedding VECTOR(1536)
);

CREATE INDEX IF NOT EXISTS rag_chunks_embedding_idx
  ON rag_chunks USING ivfflat (embedding vector_cosine_ops);
"
`;

exports[`generateRagSqliteStore > snapshot 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.
//
// SQLite + sqlite-vec vector store. Zero infrastructure required — just a local .db file.
// Install: pnpm add better-sqlite3 sqlite-vec
// Types:   pnpm add -D @types/better-sqlite3
//
// The sqlite-vec extension stores vectors as blobs and retrieves them with
// vec_distance_cosine(). See: https://alexgarcia.xyz/sqlite-vec

import Database from 'better-sqlite3'
import * as sqliteVec from 'sqlite-vec'
import type { RagChunk, RagStore } from './store.js'

const DB_PATH = process.env['SQLITE_RAG_PATH'] ?? '.rag.db'

function getDb(): Database.Database {
  const db = new Database(DB_PATH)
  sqliteVec.load(db)
  db.exec(\`
    CREATE TABLE IF NOT EXISTS rag_chunks (
      id    TEXT PRIMARY KEY,
      text  TEXT NOT NULL,
      embedding BLOB NOT NULL
    );
    CREATE VIRTUAL TABLE IF NOT EXISTS rag_vec USING vec0(
      id    TEXT PRIMARY KEY,
      embedding FLOAT[1536]
    );
  \`)
  return db
}

export class SqliteRagStore implements RagStore {
  private db = getDb()

  async upsert(chunk: Required<RagChunk>): Promise<void> {
    const embeddingBlob = Buffer.from(new Float32Array(chunk.embedding).buffer)
    this.db.prepare(\`
      INSERT INTO rag_chunks (id, text, embedding) VALUES (?, ?, ?)
      ON CONFLICT (id) DO UPDATE SET text = excluded.text, embedding = excluded.embedding
    \`).run(chunk.id, chunk.text, embeddingBlob)

    this.db.prepare(\`
      INSERT INTO rag_vec (id, embedding) VALUES (?, ?)
      ON CONFLICT (id) DO UPDATE SET embedding = excluded.embedding
    \`).run(chunk.id, embeddingBlob)
  }

  async query({ embedding, topK }: { embedding: number[]; topK: number }): Promise<RagChunk[]> {
    const queryBlob = Buffer.from(new Float32Array(embedding).buffer)
    const rows = this.db.prepare<[Buffer, number], { id: string; text: string }>(\`
      SELECT c.id, c.text
      FROM rag_vec v
      JOIN rag_chunks c ON c.id = v.id
      WHERE v.embedding MATCH ?
        AND k = ?
      ORDER BY distance
    \`).all(queryBlob, topK)
    return rows.map((r) => ({ id: r.id, text: r.text }))
  }
}
"
`;

exports[`generateRagStore > snapshot — memory 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { MemoryRagStore } from '@/lib/rag/memory-store'

export interface RagChunk {
  id: string
  text: string
  embedding?: number[]
}

export interface RagStore {
  upsert(chunk: Required<RagChunk>): Promise<void>
  query(params: { embedding: number[]; topK: number }): Promise<RagChunk[]>
}

let _store: RagStore | undefined

export function getRagStore(): RagStore {
  if (_store) return _store
  _store = new MemoryRagStore()
  return _store
}
"
`;

exports[`generateRagStore > snapshot — pgvector 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { MemoryRagStore } from '@/lib/rag/memory-store'
import { PgvectorRagStore } from '@/lib/rag/pgvector-store'

export interface RagChunk {
  id: string
  text: string
  embedding?: number[]
}

export interface RagStore {
  upsert(chunk: Required<RagChunk>): Promise<void>
  query(params: { embedding: number[]; topK: number }): Promise<RagChunk[]>
}

let _store: RagStore | undefined

export function getRagStore(): RagStore {
  if (_store) return _store
  const backend = process.env['RAG_STORAGE'] ?? 'memory'
  if (backend === 'pgvector') {
    _store = new PgvectorRagStore()
  } else {
    _store = new MemoryRagStore()
  }
  return _store
}
"
`;

exports[`generateRagStore — sqlite wiring > snapshot — sqlite 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { MemoryRagStore } from '@/lib/rag/memory-store'
import { SqliteRagStore } from '@/lib/rag/sqlite-store'

export interface RagChunk {
  id: string
  text: string
  embedding?: number[]
}

export interface RagStore {
  upsert(chunk: Required<RagChunk>): Promise<void>
  query(params: { embedding: number[]; topK: number }): Promise<RagChunk[]>
}

let _store: RagStore | undefined

export function getRagStore(): RagStore {
  if (_store) return _store
  const backend = process.env['RAG_STORAGE'] ?? 'memory'
  if (backend === 'sqlite') {
    _store = new SqliteRagStore()
  } else {
    _store = new MemoryRagStore()
  }
  return _store
}
"
`;
